# gitm8

./: .gitignore  vercel.json
.cursor/: launch.json
backend/: BEFORE_AFTER_COMPARISON.md  Dockerfile  ENVIRONMENT_SETUP.md  README.md  REFACTOR_SUMMARY.md  TEST_REFACTOR.md  dev.py  main.py  models.py  pyproject.toml  railway.json  requirements.txt  vercel.json
backend/api/: index.py
backend/config/: settings.py
backend/controller/: controller.py
backend/database/: __init__.py  base.py  db.py  models.py
backend/database/migrations/: __init__.py  env.py
backend/gitm8/: main.py
backend/routes/: portfolio_routes.py  routes.py
backend/scripts/: init_themes.py
backend/services/: analytics_service.py  cache_service.py  endpoint_registry.py  github_graphql_service.py  github_service.py  llm_service.py  portfolio_service.py
frontend/: Dockerfile  components.json  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/public/: manifest.json  robots.txt  sitemap.xml
frontend/src/: App.css  App.tsx  index.css  main.tsx  router.tsx
frontend/src/components/: AnalysisResults.tsx  CompatibilityScore.tsx  CompatibilityScoreAnalyzer.tsx  Dashboard.tsx  GitForm.tsx  LandingCard.tsx  LandingCardWrapper.tsx  LineChart.tsx  RadarChart.tsx  constants.tsx  types.ts
frontend/src/pages/: Home.tsx  Results.tsx  loaders.ts
k8s/: backend.yaml  frontend.yaml  ingress.yaml  namespace.yaml
